Configure rlimit_files and rlimit_core to avoid "No input file specified" error

--- a/templates/php-fpm-pool.conf.erb
+++ b/templates/php-fpm-pool.conf.erb
@@ -174,12 +174,12 @@ request_terminate_timeout = <%= @request_terminate_timeout %>
 
 ; Set open file descriptor rlimit.
 ; Default Value: system defined value
-;rlimit_files = 1024
+rlimit_files = 2048
 
 ; Set max core size rlimit.
 ; Possible Values: 'unlimited' or an integer greater or equal to 0
 ; Default Value: system defined value
-;rlimit_core = 0
+rlimit_core = 0
 
 ; Chroot to this directory at the start. This value must be defined as an
 ; absolute path. When this value is not set, chroot is not used.
